--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "smart-contracts/foundry/lib/forge-std"]
 	path = smart-contracts/foundry/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "smart-contracts/foundry/lib/openzeppelin-contracts"]
+	path = smart-contracts/foundry/lib/openzeppelin-contracts
+	url = https://github.com/openZeppelin/openzeppelin-contracts
