feat: switch deps to node, remap and setup deploy script

--- a/smart-contracts/foundry/.env.example
+++ b/smart-contracts/foundry/.env.example
@@ -2,9 +2,15 @@
 INFURA_PROJECT_ID= # REQUIRED
 ETHERSCAN_API_KEY= # in case you want to verity deployed contract on Sepolia testnet
 
-# PRIVATE KEYS; they can be the same private key
-PRIVATE_KEY_OASIS= # REQUIRED
-PRIVATE_KEY_SEPOLIA= # REQUIRED
+# NOTE: NEVER STORE YOUR PRIVATE KEY IN PLAIN TEXT...EVERR
+# PRIVATE_KEY_OASIS= # DON'T
+# PRIVATE_KEY_SEPOLIA= # DON'T
+# VIEW README on how to securely use your private key with foundry
+PUBLIC_ADDRESS_OASIS= # REQUIRED
+PUBLIC_ADDRESS_SEPOLIA= # REQUIRED
 
 # REGISTERED SMART CONTRACT CONSTRUCTORS
 INITIAL_OWNER_ADDRESS= # leaving this blank will take the smart contract DEPLOYER as the initial owner
+
+TOKEN_AUTHORITY_CONTRACT_ADDRESS=
+TOKEN_AUTHORITY_PUBLIC_KEY_ADDRESS=
