--- a/smart-contracts/foundry/foundry.toml
+++ b/smart-contracts/foundry/foundry.toml
@@ -3,20 +3,16 @@ src = "src"
 out = "out"
 libs = ["lib", "dependencies"]
 solc_version = "0.8.24"
+evm_version = "paris"
 optimizer_runs = 200
 via_ir = true
 remappings = [
-    '@oasisprotocol/sapphire-contracts-v0.2.11/=dependencies/@oasisprotocol-sapphire-contracts-v0.2.11/',
-    '@oasisprotocol/sapphire-contracts/=dependencies/@oasisprotocol-sapphire-contracts-v0.2.11/contracts',
-    '@openzeppelin-contracts-5.2.0/=dependencies/@openzeppelin-contracts-5.2.0/',
-    '@openzeppelin/contracts/=dependencies/@openzeppelin-contracts-5.2.0/',
-    'forge-std-1.9.5/=dependencies/forge-std-1.9.5/',
-    'forge-std/=dependencies/forge-std-1.9.5/src',
+    '@oasisprotocol/sapphire-contracts/=node_modules/@oasisprotocol/sapphire-contracts/',
+    '@openzeppelin/contracts/=node_modules/@openzeppelin/contracts/',
+    'forge-std/=node_modules/forge-std/src/',
 ]
 
-[dependencies]
-forge-std = "1.9.5"
-"@openzeppelin-contracts" = "5.2.0"
-"@oasisprotocol/sapphire-contracts" = { version = "v0.2.11", git = "https://github.com/oasisprotocol/sapphire-paratime.git", rev = "3065e050e9859079e26029c442bb4cc436d5aad0" }
+[rpc_endpoints]
+sepolia = "${SEPOLIA_RPC_URL}"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
