--- a/.github/workflows/foundry-ci.yml
+++ b/.github/workflows/foundry-ci.yml
@@ -23,6 +23,16 @@ jobs:
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'yarn'
+  
+      - name: Install dependencies
+        shell: bash
+        run: cd smart-contracts/foundry/ yarn install --frozen-lockfile
+
       - name: Show Forge version
         run: |
           cd smart-contracts/foundry/ && forge --version
