--- a/smart-contracts/hardhat/package.json
+++ b/smart-contracts/hardhat/package.json
@@ -1,11 +1,16 @@
 {
   "name": "hardhat",
   "version": "1.0.0",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cnc": "hardhat clean && hardhat compile",
-    "deploy": "hardhat clean && hardhat compile && hardhat run scripts/deploy.ts --network sepolia"
+    "deploy": "hardhat clean && hardhat compile && hardhat run scripts/deploy.ts --network sepolia",
+    "deploy-ta": "hardhat run scripts/deployTA.ts --network sapphire-testnet",
+    "deploy-main": "hardhat run scripts/deployMain.ts --network sepolia",
+    "register": "hardhat run scripts/platformRegister.ts",
+    "dvr": "npm run deploy-ta && npm run deploy-main && npm run register"
   },
   "author": "",
   "license": "ISC",
