--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "hh": "npm install --workspace=hardhat",
-    "deploy": "npm run deploy --workspace=hardhat",
-    "register": "npm run register --workspace=hardhat",
-    "full-deploy": "npm run dvr --workspace=hardhat"
+    "hcnc": "npm run cnc --workspace=hardhat",
+    "hdeploy": "npm run deploy --workspace=hardhat",
+    "hta": "npm run deploy-ta --workspace=hardhat",
+    "hmain": "npm run deploy-main --workspace=hardhat",
+    "hregister": "npm run register --workspace=hardhat",
+    "hdvr": "npm run dvr --workspace=hardhat"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7"
   }
 }
