--- a/smart-contracts/hardhat/package.json
+++ b/smart-contracts/hardhat/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cnc": "hardhat clean && hardhat compile",
-    "deploy": "hardhat clean && hardhat compile && hardhat run scripts/deploy.ts --network sepolia",
-    "deploy-ta": "hardhat run scripts/deployTA.ts --network sapphire-testnet",
-    "deploy-main": "hardhat run scripts/deployMain.ts --network sepolia",
-    "register": "hardhat run scripts/platformRegister.ts",
-    "dvr": "npm run deploy-ta && npm run deploy-main && npm run register"
+    "deploy": "hardhat clean && hardhat compile && hardhat run scripts/deployNoRegister.ts --network sepolia",
+    "deploy-ta": "hardhat clean && hardhat compile && hardhat run scripts/1_deployTA.ts --network sapphire-testnet",
+    "deploy-main": "hardhat clean && hardhat compile && hardhat run scripts/2_deployMain.ts --network sepolia",
+    "register": "hardhat run scripts/3_platformRegister.ts",
+    "dvr": "npm run cnc &&npm run deploy-ta && npm run deploy-main && npm run register"
   },
   "author": "",
   "license": "ISC",
