Revert "Added KRNL logo + fixed Hardhat Verify"
This reverts commit 7ad96e70093a443a040b11a5e9e53ef381605e1e.

--- a/package.json
+++ b/package.json
@@ -7,17 +7,15 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "setup-env": "node setup-env.js",
     "hh": "npm install --workspace=hardhat",
     "hcnc": "npm run cnc --workspace=hardhat",
     "hdeploy": "npm run deploy --workspace=hardhat",
     "hta": "npm run deploy-ta --workspace=hardhat",
     "hmain": "npm run deploy-main --workspace=hardhat",
     "hregister": "npm run register --workspace=hardhat",
-    "hdvr": "npm run setup-env && npm run dvr --workspace=hardhat"
+    "hdvr": "npm run dvr --workspace=hardhat"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
     "dotenv": "^16.4.7"
   }
 }
