--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "hta": "npm run deploy-ta --workspace=hardhat",
     "hmain": "npm run deploy-main --workspace=hardhat",
     "hregister": "npm run register --workspace=hardhat",
-    "hdvr": "npm run setup-env && npm run dvr --workspace=hardhat"
+    "hdvr": "npm run setup-env && npm run dvr --workspace=hardhat",
+    "hdeploy-all": "npm run deploy-all --workspace=hardhat"
   },
   "dependencies": {
     "chalk": "^4.1.2",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "hardhat": "^2.22.14"
   }
 }
